Switch to a Quarkus extension approach